force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/ucinn_ascendv2__Affiliation__c.object-meta.xml
<CustomObject>
    <description>A connection between constituents and organizations that can affect gift processing.</description>
    <label>Affiliation</label>
    <nameField>
        <label>Affiliation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>