force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Affiliation_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>