force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Constituent_Has_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Constituent_Has_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Constituent linked to Affiliation record has a current Assignment type of Primary, Secondary, or Interested with no end date. This field is auto populated via a trigger on the object</description>
    <label>Constituent Is Managed</label>
    <type>Checkbox</type>
</CustomField>