force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Corporate_Request_Contact__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Request_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Request Contact</label>
    <type>Checkbox</type>
</CustomField>