force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Employer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_Formula__c</fullName>
    <description>For showing Employer Name on Constituent Overview</description>
    <formula>IF(ISBLANK(Employer_Name__c),  ucinn_ascendv2__Account__r.Name , Employer_Name__c)</formula>
    <label>Employer Name Formula</label>
    <type>Text</type>
</CustomField>