force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Hire_Date_ISU__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date_ISU__c</fullName>
    <description>This is the hire date received from Iowa State about ISU Faculty/Staff</description>
    <label>Hire Date (ISU)</label>
    <type>Date</type>
</CustomField>