force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <description>Origin: summit.mstr.std_indst_cd3</description>
    <label>Industry Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Aerospace Engr</fullName>
            </value>
            <value>
                <fullName>Ag Bus/Economics</fullName>
            </value>
            <value>
                <fullName>Agricultural Engr</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Agronomy</fullName>
            </value>
            <value>
                <fullName>Animal Science</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Art &amp; Design</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Biological Sciences</fullName>
            </value>
            <value>
                <fullName>Bldg/Construction</fullName>
            </value>
            <value>
                <fullName>Broadcasting</fullName>
            </value>
            <value>
                <fullName>Business &amp; Commerce</fullName>
            </value>
            <value>
                <fullName>Chemical Engr</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Civil Engr</fullName>
            </value>
            <value>
                <fullName>Clerical Office Work</fullName>
            </value>
            <value>
                <fullName>Comm/Reg Planning</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Communications Tech</fullName>
            </value>
            <value>
                <fullName>Community Services</fullName>
            </value>
            <value>
                <fullName>Computer/Inf Analyst</fullName>
            </value>
            <value>
                <fullName>Construction Engr</fullName>
            </value>
            <value>
                <fullName>Creative Writing</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Earth Sciences</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Education, General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>