force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ISUF_Is_Preferred__c.field-meta.xml
<CustomField>
    <fullName>ISUF_Is_Preferred__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Preferred</label>
    <type>Checkbox</type>
</CustomField>