force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Occupation_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Type__c</fullName>
    <description>Origin: summit.mstr.ocptn_sttus</description>
    <label>Occupation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Considering employment (offer)</fullName>
            </value>
            <value>
                <fullName>Employed full-time</fullName>
            </value>
            <value>
                <fullName>Employed part-time</fullName>
            </value>
            <value>
                <fullName>Not employed outside the home</fullName>
            </value>
            <value>
                <fullName>Not seeking employment at this time</fullName>
            </value>
            <value>
                <fullName>Position is major related</fullName>
            </value>
            <value>
                <fullName>Position is not major related</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Seeking employment</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>