force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>College\Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>