force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/Related_Constituent_Open_Pledge_Balance__c.field-meta.xml
<CustomField>
    <fullName>Related_Constituent_Open_Pledge_Balance__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.Balance_On_Open_Pledges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Constituent Open Pledge Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>