force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Affiliation_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Affiliation_Name_Auto_Number__c</fullName>
    <displayFormat>AF-{0000000}</displayFormat>
    <label>Affiliation Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>