force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Constituent_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Constituent_Role__c</fullName>
    <inlineHelpText>These Role types will add matching gift expectancies:
Employer
Retiree Employer
Former Employer Matching
Company Founded by Individual
Company owned by Individual
Employer – Second Business
Member of Board</inlineHelpText>
    <label>Constituent Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Client - Accountant</fullName>
            </value>
            <value>
                <fullName>Client - Attorney</fullName>
            </value>
            <value>
                <fullName>Client - Financial Planner</fullName>
            </value>
            <value>
                <fullName>Community foundation contact</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employee non-matching</fullName>
            </value>
            <value>
                <fullName>Employee - Second Business</fullName>
            </value>
            <value>
                <fullName>Estate Gift</fullName>
            </value>
            <value>
                <fullName>Financial Planner</fullName>
            </value>
            <value>
                <fullName>Former Employee matching</fullName>
            </value>
            <value>
                <fullName>Founder/Co-Founder</fullName>
            </value>
            <value>
                <fullName>Funds Held in Trust Donor</fullName>
            </value>
            <value>
                <fullName>Funds Held in Trust Income Recipient</fullName>
            </value>
            <value>
                <fullName>Honorarium</fullName>
            </value>
            <value>
                <fullName>Honorarium for</fullName>
            </value>
            <value>
                <fullName>ISU Corporate Engagement Team Member</fullName>
            </value>
            <value>
                <fullName>ISU Corporate Engagement Team Org</fullName>
            </value>
            <value>
                <fullName>Manager of Foundation</fullName>
            </value>
            <value>
                <fullName>Member of board</fullName>
                <label>Member of Board</label>
            </value>
            <value>
                <fullName>Owner of Company</fullName>
            </value>
            <value>
                <fullName>Owner of DAF</fullName>
            </value>
            <value>
                <fullName>Owner of Foundation</fullName>
            </value>
            <value>
                <fullName>Owner of trust</fullName>
            </value>
            <value>
                <fullName>Previous Company Owner</fullName>
            </value>
            <value>
                <fullName>Retired Employee</fullName>
            </value>
            <value>
                <fullName>Trustee/Officer</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>