force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>