force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Employee_Status__c</fullName>
    <label>Employee Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>