force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Home_Department__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Department</label>
    <referenceTo>ucinn_ascendv2__Home_Department__c</referenceTo>
    <relationshipLabel>Affiliations (Home Department)</relationshipLabel>
    <relationshipName>Affiliations_Home_Department</relationshipName>
    <type>Lookup</type>
</CustomField>