force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Home_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Home_Department_Name__c</fullName>
    <label>Home Department Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>