force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Is_Employer_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Employer_Formula__c</fullName>
    <formula>IF(OR((TEXT(ucinn_ascendv2__Organization_Role__c) = &apos;Retiree Employer&apos;), (TEXT(ucinn_ascendv2__Organization_Role__c) = &apos;Employer&apos; &amp;&amp; TEXT(ucinn_ascendv2__Status__c) = &apos;Current&apos;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Employer</label>
    <type>Checkbox</type>
</CustomField>