force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Is_On_Leave__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_On_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Leave</label>
    <type>Checkbox</type>
</CustomField>