force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>