force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Job_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Job_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Code</label>
    <referenceTo>ucinn_ascendv2__Job_Code__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations_Job_Code</relationshipName>
    <type>Lookup</type>
</CustomField>