force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Job_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Job_Code_Description__c</fullName>
    <label>Job Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>