force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Organization_Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Role__c</fullName>
    <label>Organization Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Board Affiliation</fullName>
                <isActive>false</isActive>
                <label>Board Affiliation</label>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
                <isActive>false</isActive>
                <label>Branch</label>
            </value>
            <value>
                <fullName>Child</fullName>
                <isActive>false</isActive>
                <label>Child</label>
            </value>
            <value>
                <fullName>Client - Accountant</fullName>
            </value>
            <value>
                <fullName>Client - Attorney</fullName>
            </value>
            <value>
                <fullName>Client - Financial Planner</fullName>
            </value>
            <value>
                <fullName>Community Foundation</fullName>
                <isActive>false</isActive>
                <label>Community Foundation</label>
            </value>
            <value>
                <fullName>Community foundation contact</fullName>
            </value>
            <value>
                <fullName>Company Contact</fullName>
            </value>
            <value>
                <fullName>Company Divided</fullName>
                <isActive>false</isActive>
                <label>Company Divided</label>
            </value>
            <value>
                <fullName>Company employs individual</fullName>
                <isActive>false</isActive>
                <label>Company employs individual</label>
            </value>
            <value>
                <fullName>Company Founded by individual</fullName>
            </value>
            <value>
                <fullName>Company Owned by Individual</fullName>
            </value>
            <value>
                <fullName>Company Previously Owned by Individual</fullName>
            </value>
            <value>
                <fullName>Company representative or designate</fullName>
                <isActive>false</isActive>
                <label>Company representative or designate</label>
            </value>
            <value>
                <fullName>Contact</fullName>
                <isActive>false</isActive>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Corporate Board</fullName>
                <isActive>false</isActive>
                <label>Corporate Board</label>
            </value>
            <value>
                <fullName>Corporate Foundation</fullName>
                <isActive>false</isActive>
                <label>Corporate Foundation</label>
            </value>
            <value>
                <fullName>Corporate Matching Gift Program Record</fullName>
                <isActive>false</isActive>
                <label>Corporate Matching Gift Program Record</label>
            </value>
            <value>
                <fullName>Corporate Prospect Record</fullName>
                <isActive>false</isActive>
                <label>Corporate Prospect Record</label>
            </value>
            <value>
                <fullName>Corporation</fullName>
                <isActive>false</isActive>
                <label>Corporation</label>
            </value>
            <value>
                <fullName>DAF Owned by Individual</fullName>
            </value>
            <value>
                <fullName>Donor/Company Controlled</fullName>
                <isActive>false</isActive>
                <label>Donor/Company Controlled</label>
            </value>
            <value>
                <fullName>Donor/Company Influenced</fullName>
                <isActive>false</isActive>
                <label>Donor/Company Influenced</label>
            </value>
            <value>
                <fullName>Donor Advised Fund/Owner</fullName>
                <isActive>false</isActive>
                <label>Donor Advised Fund/Owner</label>
            </value>
            <value>
                <fullName>Employed by company</fullName>
                <isActive>false</isActive>
                <label>Employed by company</label>
            </value>
            <value>
                <fullName>Employee to Employer for MG</fullName>
                <isActive>false</isActive>
                <label>Employee to Employer for MG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>