force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Prevent_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prevent_Soft_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DEPRECATED</description>
    <label>Prevent Soft Credit (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>