force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Related_Account_Donor_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Account_Donor_ID_Formula__c</fullName>
    <formula>ucinn_ascendv2__Account__r.ucinn_ascendv2__Donor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Organization Donor ID</label>
    <type>Text</type>
</CustomField>