force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Related_Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Account_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Organization Name</label>
    <type>Text</type>
</CustomField>