force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Related_Contact_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Contact_Type_Formula__c</fullName>
    <formula>ucinn_ascendv2__Contact__r.ucinn_ascendv2__Primary_Contact_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Constituent Type</label>
    <type>Text</type>
</CustomField>