force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Significant_Other_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Significant_Other_Last_Name__c</fullName>
    <label>Significant Other Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>