force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Considering employment (offer)</fullName>
                <isActive>false</isActive>
                <label>Considering employment (offer)</label>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Employed full-time</fullName>
                <isActive>false</isActive>
                <label>Employed full-time</label>
            </value>
            <value>
                <fullName>Employed part-time</fullName>
                <isActive>false</isActive>
                <label>Employed part-time</label>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Not employed outside the home</fullName>
                <isActive>false</isActive>
                <label>Not employed outside the home</label>
            </value>
            <value>
                <fullName>Not seeking employment at this time</fullName>
                <isActive>false</isActive>
                <label>Not seeking employment at this time</label>
            </value>
            <value>
                <fullName>Position is major related</fullName>
                <isActive>false</isActive>
                <label>Position is major related</label>
            </value>
            <value>
                <fullName>Position is not major related</fullName>
                <isActive>false</isActive>
                <label>Position is not major related</label>
            </value>
            <value>
                <fullName>Retired</fullName>
                <isActive>false</isActive>
                <label>Retired</label>
            </value>
            <value>
                <fullName>Seeking employment</fullName>
                <isActive>false</isActive>
                <label>Seeking employment</label>
            </value>
            <value>
                <fullName>Self-employed</fullName>
                <isActive>false</isActive>
                <label>Self-employed</label>
            </value>
            <value>
                <fullName>Student</fullName>
                <isActive>false</isActive>
                <label>Student</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>