force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_ascendv2__Supervisory_Organization__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Supervisory_Organization__c</fullName>
    <label>Supervisory Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>