force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_portal_Employer_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Employer_Text__c</fullName>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>