force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_portal_Is_Deleted_By_User__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Deleted_By_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted By User</label>
    <type>Checkbox</type>
</CustomField>