force-app/main/default/objects/ucinn_ascendv2__Affiliation__c/fields/ucinn_portal_Is_Show_Employer__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Show_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show Employer</label>
    <type>Checkbox</type>
</CustomField>